gccida/g2/ix86_return_in_memory
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_return_in_memory/src/i386.c:2773:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( type->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_return_in_memory/src/i386.c:2779:21: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| ( unsigned int)( mode_class_0[BYTE5( type->block.abstract_origin) >> 1] - 7) <= 1 && int_size_in_bytes( type) == 8 ) 
                    ^~~~~~~~~~~~
                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_return_in_memory/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_return_in_memory/src/i386.c:2787:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
return ( unsigned int)( mode_class_0[BYTE5( type->block.abstract_origin) >> 1] - 7) > 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_return_in_memory/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_return_in_memory/src/obj/i386.o] Error 1
